--- a/css/main.css
+++ b/css/main.css
@@ -32,47 +32,134 @@ table, caption, tbody, tfoot, thead, tr, th, td
 }
 .logo
 {
-	background-color: red;
-	height: 200px;
-	width: 100px;
+	background-color: white;
+	height: 100px;
+	width: 50%;
 	float: left;
+}
+.logo img
+{
+	text-align: left;
+	margin: auto;
+	padding-top: 15px;
+	padding-left: 15px;
 }
 .primeiro_menu
 {
-	background-color: blue;
-	height: 50px;
-	width: 600px;
+	background-color: white;
+	height: 100px;
+	width: 50%;
 	float: left;
 }
-.redes_links
+.primeiro_menu ul li
 {
-	background-color: green;
-	height: 10px;
-	width: 
+	list-style: none;
 	float: left;
+	margin: 0;
+	padding: 15px;
+}
+.primeiro_menu ul li a
+{
+	background: #f1f1f1;
+    padding: 3px;
+    margin-right: 1px;
+    color: #de3232;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 10px;
 }
 .sub_menu
 {
-	background-color: orange;
-	height: 50px;
+	background-color: black;
+	width: 100%;
+	height: 100px;
 }
-.login
+.sub_menu .menucentral
 {
-	background-color: grey;
-	height: 50px;
+	margin: auto;
+	height: 100px;
+	width: 50%;
+}
+.sub_menu .menucentral ul li
+{
+	list-style: none;
+	float: left;
+	margin: 0;
+	padding: 15px;
+}
+.sub_menu .menucentral ul li a
+{
+	background: #f1f1f1;
+    padding: 3px;
+    margin-right: 1px;
+    color: #de3232;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+.sub_menu .menucentral ul li a img
+{
+	color: none;
+	background: blue;
 }
 .banner
 {
-	background-color: violet; 
-	height: 300px;
+	background-color: violet;
+	width: 100%; 
+	height: 500px;
+
+}
+.banner img
+{
+	width: 100%; 
+	height: 100%;
+	overflow: visible;
 }
 .banner2
 {
 	background-color: yellow;
-	height: 300px;
+	width: 100%;
+	height: 500px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+.banner2 img
+{
+	width: 100%; 
+	height: 100%;
+	overflow: visible;
 }
 .banner3
 {
 	background-color: brown;
-	height: 300px;
+	width: 100%;
+	height: 500px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+.banner3 img
+{
+	width: 100%; 
+	height: 100%;
+	overflow: visible;
+}
+.rodape
+{
+	background: #f1f1f1;
+	height: 350px;
+	width: 100%;
+}
+.rodape .quem_somos
+{
+	background: #f1f1f1;
+	height: 100%;
+	width: 25%;
+	float: left;
+}
+.rodape .baixe_agora
+{
+	background: #f1f1f1;
+	height: 100%;
+	width: 25%;
+	float: left;
 }
