--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,7 @@ del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td 
-
-
+table, caption, tbody, tfoot, thead, tr, th, td {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -17,6 +15,8 @@ table, caption, tbody, tfoot, thead, tr, th, td
 	font-size: 100%;
 	font-family: inherit;
 	vertical-align: baseline;
+	list-style: none;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .container {
@@ -25,141 +25,32 @@ table, caption, tbody, tfoot, thead, tr, th, td
 	margin: auto;
 	padding-left: 15px;
 	padding-right: 15px;
+	position: relative;
 }
-.limpa
-{
-	clear: both;
-}
-.logo
-{
-	background-color: white;
-	height: 100px;
-	width: 50%;
-	float: left;
-}
-.logo img
-{
-	text-align: left;
-	margin: auto;
-	padding-top: 15px;
-	padding-left: 15px;
-}
-.primeiro_menu
-{
-	background-color: white;
-	height: 100px;
-	width: 50%;
-	float: left;
-}
-.primeiro_menu ul li
-{
-	list-style: none;
-	float: left;
-	margin: 0;
-	padding: 15px;
-}
-.primeiro_menu ul li a
-{
-	background: #f1f1f1;
-    padding: 3px;
-    margin-right: 1px;
-    color: #de3232;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 10px;
-}
-.sub_menu
-{
-	background-color: black;
-	width: 100%;
-	height: 100px;
-}
-.sub_menu .menucentral
-{
-	margin: auto;
-	height: 100px;
-	width: 50%;
-}
-.sub_menu .menucentral ul li
-{
-	list-style: none;
-	float: left;
-	margin: 0;
-	padding: 15px;
-}
-.sub_menu .menucentral ul li a
-{
-	background: #f1f1f1;
-    padding: 3px;
-    margin-right: 1px;
-    color: #de3232;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 10px;
-}
-.sub_menu .menucentral ul li a img
-{
-	color: none;
-	background: blue;
-}
-.banner
-{
-	background-color: violet;
-	width: 100%; 
-	height: 500px;
 
-}
-.banner img
-{
-	width: 100%; 
-	height: 100%;
-	overflow: visible;
-}
-.banner2
-{
-	background-color: yellow;
-	width: 100%;
-	height: 500px;
-	margin-top: 50px;
-	margin-bottom: 50px;
-}
-.banner2 img
-{
-	width: 100%; 
-	height: 100%;
-	overflow: visible;
-}
-.banner3
-{
-	background-color: brown;
-	width: 100%;
-	height: 500px;
-	margin-top: 50px;
-	margin-bottom: 50px;
-}
-.banner3 img
-{
-	width: 100%; 
-	height: 100%;
-	overflow: visible;
-}
-.rodape
-{
-	background: #f1f1f1;
-	height: 350px;
-	width: 100%;
-}
-.rodape .quem_somos
-{
-	background: #f1f1f1;
-	height: 100%;
-	width: 25%;
-	float: left;
-}
-.rodape .baixe_agora
-{
-	background: #f1f1f1;
-	height: 100%;
-	width: 25%;
-	float: left;
+#header {height: 100px;}
+#header .logo {float: left;padding-top: 22px;}
+#header .menu {float: right;}
+#header .menu li {float: left;}
+#header .menu li a {text-transform: uppercase;font-weight: 700;text-decoration: none;color: #666;padding: 40px 20px;display: block;}
+#header .menu li a::before {content: '';height: 4px;width: 0px;display: block;background: #0096dc;border-radius: 2px;position: absolute;top: 70px;transition-duration: 0.5s}
+#header .menu li a:hover::before {width: 30px}
+#header .menu li.active a::before {width: 30px}
+#header .social {float: right;}
+#header .social li {float: left;}
+#header .social li a {padding: 38px 4px;display: block;}
+#header .social li a img {filter: grayscale(1);transition-duration: 0.5s}
+#header .social li a:hover img {filter: grayscale(0)}
+
+#submenu {height: 100px;background-image: url(../img/bg_header.jpg);background-attachment: fixed;}
+#submenu ul {margin: auto;position: absolute;left: 50%;transform: translate(-50%, -50%);top: 50px;display: inline-table;}
+#submenu ul li {float: left;}
+#submenu ul li a {text-decoration: none;color: #999;text-transform: uppercase;font-size: 12px;font-weight: 100;padding: 10px 20px;border-radius: 4px;margin: 10px;transition-duration: 0.5s;}
+#submenu ul li a:hover {color: #fff; background: #0096dc}
+#submenu .area-restrita {position: absolute;right: 15px;top: 29px;background: #0096dc;padding: 6px 10px;border-radius: 8px;}
+
+#banner img{
+    width: 100%;
+    position: relative;
+    top: -24px;
 }
